--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <!-- <iframe width="1280" height="533" src="https://www.youtube.com/embed/ysSxxIqKNN0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-  <audio src="https://www.youtube.com/watch?v=J-z4sUKWd6Q"></audio>      
+  <audio src="https://www.youtube.com/watch?v=J-z4sUKWd6Q" controls autoplay></audio>      
   
 
   <script src="app.js"></script>
