--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  <iframe width="1280" height="533" src="https://www.youtube.com/embed/ysSxxIqKNN0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  
+  <iframe width="1280" height="533" src="" frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  <script src="originalList.js"></script>
+  <script src="listInUse.js"></script>
   <script src="app.js"></script>
 </body>
-</html>
 
+</html>
