--- a/index.html
+++ b/index.html
@@ -10,10 +10,129 @@
 
 <body>
 
-  <iframe width="1280" height="533" src="" frameborder="0"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <header>
 
-  <script src="originalList.js"></script>
+    <h1>Vellyus's Music Player</h1>
+
+  </header>
+
+  <main>
+
+    <iframe width="100%" height="100%" src="" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <p class="message">Here goes the message for the special songs... Yeah -.-</p>
+
+    <input type="url">
+    <button>Add to Playlist</button>
+
+    <div class="songInQue">
+      <div class="songData">
+        <p>Name of the artist</p>
+        <p>Title of the song</p>
+        <p>Duration</p>
+      </div>
+
+      <div class="buttons">
+        <span>Up</span>
+        <span>Del</span>
+        <span>Down</span>
+      </div>
+    </div>
+
+    <div class="songInQue">
+      <div class="songData">
+        <p>Name of the artist</p>
+        <p>Title of the song</p>
+        <p>Duration</p>
+      </div>
+
+      <div class="buttons">
+        <span>Up</span>
+        <span>Del</span>
+        <span>Down</span>
+      </div>
+    </div>
+
+    <div class="songInQue">
+      <div class="songData">
+        <p>Name of the artist</p>
+        <p>Title of the song</p>
+        <p>Duration</p>
+      </div>
+
+      <div class="buttons">
+        <span>Up</span>
+        <span>Del</span>
+        <span>Down</span>
+      </div>
+    </div>
+
+    <div class="songInQue">
+      <div class="songData">
+        <p>Name of the artist</p>
+        <p>Title of the song</p>
+        <p>Duration</p>
+      </div>
+
+      <div class="buttons">
+        <span>Up</span>
+        <span>Del</span>
+        <span>Down</span>
+      </div>
+    </div>
+
+    <div class="songInQue">
+      <div class="songData">
+        <p>Name of the artist</p>
+        <p>Title of the song</p>
+        <p>Duration</p>
+      </div>
+
+      <div class="buttons">
+        <span>Up</span>
+        <span>Del</span>
+        <span>Down</span>
+      </div>
+    </div>
+
+    <div class="songInQue">
+      <div class="songData">
+        <p>Name of the artist</p>
+        <p>Title of the song</p>
+        <p>Duration</p>
+      </div>
+
+      <div class="buttons">
+        <span>Up</span>
+        <span>Del</span>
+        <span>Down</span>
+      </div>
+    </div>
+
+    <div class="songInQue">
+      <div class="songData">
+        <p>Name of the artist</p>
+        <p>Title of the song</p>
+        <p>Duration</p>
+      </div>
+
+      <div class="buttons">
+        <span>Up</span>
+        <span>Del</span>
+        <span>Down</span>
+      </div>
+    </div>
+
+
+  </main>
+
+  <footer>
+    <h2>Patreon link</h2>
+  </footer>
+
+  <script src="originalList.js">
+  </script>
   <script src="listInUse.js"></script>
   <script src="app.js"></script>
 </body>
