--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <iframe width="100%" height="100%" src="" frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <p class="message">Here goes the message for the special songs... Yeah -.-</p>
+    <p class="message"></p>
 
     <input type="url">
     <button>Add to Playlist</button>
