--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
   </header>
 
   <main>
-
+    <div class="SongDescription">
+<h2>Song of the day</h2>
+<p class="title"></p>
+<p class="from">from</p>
+<p class="artist"></p>
+</div>
     <iframe width="100%" height="100%" src="" frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
