--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="SongDescription">
 <h2>Song of the day</h2>
 <p class="title"></p>
-<p class="from">from</p>
+<p class="by">by</p>
 <p class="artist"></p>
 </div>
     <iframe width="100%" height="100%" src="" frameborder="0"
