--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p class="by">by</p>
 <p class="artist"></p>
 </div>
-    <iframe width="100%" height="100%" src="" frameborder="0"
+    <iframe id ="player" width="100%" height="100%" src="" frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <p class="message"></p>
