--- a/index.html
+++ b/index.html
@@ -24,18 +24,19 @@
 <p class="by">by</p>
 <p class="artist"></p>
 </div>
-    <iframe id ="player" width="100%" height="100%" src="" frameborder="0"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<div id="player"></div>
+    <!-- <iframe id ="player" width="100%" height="100%" src="" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
     <p class="message"></p>
 
     <input type="url">
-    <button>Add to Playlist</button>
+    <button class="addButton">Add to Playlist</button>
 
     <div class="songInQue">
       <div class="songData">
-        <p>Name of the artist</p>
-        <p>Title of the song</p>
+        <p>Title of the Video</p>
         <p>Duration</p>
       </div>
 
@@ -48,8 +49,7 @@
 
     <div class="songInQue">
       <div class="songData">
-        <p>Name of the artist</p>
-        <p>Title of the song</p>
+        <p>Title of the Video</p>
         <p>Duration</p>
       </div>
 
@@ -59,77 +59,6 @@
         <span>Down</span>
       </div>
     </div>
-
-    <div class="songInQue">
-      <div class="songData">
-        <p>Name of the artist</p>
-        <p>Title of the song</p>
-        <p>Duration</p>
-      </div>
-
-      <div class="buttons">
-        <span>Up</span>
-        <span>Del</span>
-        <span>Down</span>
-      </div>
-    </div>
-
-    <div class="songInQue">
-      <div class="songData">
-        <p>Name of the artist</p>
-        <p>Title of the song</p>
-        <p>Duration</p>
-      </div>
-
-      <div class="buttons">
-        <span>Up</span>
-        <span>Del</span>
-        <span>Down</span>
-      </div>
-    </div>
-
-    <div class="songInQue">
-      <div class="songData">
-        <p>Name of the artist</p>
-        <p>Title of the song</p>
-        <p>Duration</p>
-      </div>
-
-      <div class="buttons">
-        <span>Up</span>
-        <span>Del</span>
-        <span>Down</span>
-      </div>
-    </div>
-
-    <div class="songInQue">
-      <div class="songData">
-        <p>Name of the artist</p>
-        <p>Title of the song</p>
-        <p>Duration</p>
-      </div>
-
-      <div class="buttons">
-        <span>Up</span>
-        <span>Del</span>
-        <span>Down</span>
-      </div>
-    </div>
-
-    <div class="songInQue">
-      <div class="songData">
-        <p>Name of the artist</p>
-        <p>Title of the song</p>
-        <p>Duration</p>
-      </div>
-
-      <div class="buttons">
-        <span>Up</span>
-        <span>Del</span>
-        <span>Down</span>
-      </div>
-    </div>
-
 
   </main>
 
