--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <input type="url">
     <button class="addButton">Add to Playlist</button>
 
-    <div class="songInQue">
+    <!-- <div class="songInQue">
       <div class="songData">
         <p>Title of the Video</p>
         <p>Duration</p>
@@ -58,7 +58,7 @@
         <span>Del</span>
         <span>Down</span>
       </div>
-    </div>
+    </div> -->
 
   </main>
 
