--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 </div>
 
 <div id="player"></div>
+<div id="invisiblePlayer"></div>
+
     <!-- <iframe id ="player" width="100%" height="100%" src="" frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
