--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <input type="url">
     <button class="addButton">Add to Playlist</button>
 
+
+    <ul class="songsInQue"></ul>
     <!-- <div class="songInQue">
       <div class="songData">
         <p>Title of the Video</p>
