--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <header>
 
     <h1>Vellyus's Music Player</h1>
+    <span class="inProgress">- Development In Progress -</span>
 
   </header>
 
