--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main>
     <div class="SongDescription">
-<h2>Song of the day</h2>
+<h2>Today's song</h2>
 <p class="title"></p>
 <p class="by">by</p>
 <p class="artist"></p>
