--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <p class="message"></p>
 
-    <input type="url">
+    <input type="url" placeholder="Enter a YouTube link">
     <button class="addButton">Add to Playlist</button>
 
 
