--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
   </header>
 
   <main>
-    <div class="SongDescription">
-<h2>Today's song</h2>
-<p class="title"></p>
-<p class="by">by</p>
-<p class="artist"></p>
-</div>
+    <div class="container">
 
-<div id="player"></div>
-<div id="invisiblePlayer"></div>
+      <div class="SongDescription">
+        <h2>Today's song</h2>
+        <p class="title"></p>
+        <p class="by">by</p>
+        <p class="artist"></p>
+      </div>
+      <div id="player"></div>
+      <div id="invisiblePlayer"></div>
+    </div>
 
     <!-- <iframe id ="player" width="100%" height="100%" src="" frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
