--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
   </header>
 
   <main>
-    <div class="container">
+    <!-- <div class="container"> -->
 
-      <div class="SongDescription">
-        <h2>Today's song</h2>
-        <p class="title"></p>
-        <p class="by">by</p>
-        <p class="artist"></p>
-      </div>
-      <div id="player"></div>
-      <div id="invisiblePlayer"></div>
+    <h2 class="playerTitle">Today's song</h2>
+    <div class="SongDescription">
 
-      <p class="message"></p>
-
+      <p class="title"></p>
+      <p class="by">by</p>
+      <p class="artist"></p>
     </div>
+    <div id="player"></div>
+    <div id="invisiblePlayer"></div>
+
+    <p class="message"></p>
+
+    <!-- </div> -->
 
     <!-- <iframe id ="player" width="100%" height="100%" src="" frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
@@ -72,7 +73,7 @@
   </main>
 
   <footer>
-    <h2>Patreon link</h2>
+    <h2>Patreon link - coming soon!</h2>
   </footer>
 
   <script src="originalList.js">
