--- a/index.html
+++ b/index.html
@@ -11,70 +11,52 @@
 
 <body>
 
-  <header>
+  <div class="flex-wrapper">
+    <header>
 
-    <h1>Vellyus's Music Player</h1>
-    <span class="inProgress">- Development In Progress -</span>
+      <h1>Vellyus's Music Player</h1>
+      <span class="inProgress">- Development In Progress -</span>
 
-  </header>
+    </header>
 
-  <main>
-    <!-- <div class="container"> -->
+    <main>
 
-    <h2 class="playerTitle">Today's song</h2>
-    <div class="SongDescription">
+      <h2 class="playerTitle">Today's song</h2>
+      <div class="SongDescription">
 
-      <p class="title"></p>
-      <p class="by">by</p>
-      <p class="artist"></p>
-    </div>
-    <div id="player"></div>
-    <div id="invisiblePlayer"></div>
-
-    <p class="message"></p>
-
-    <!-- </div> -->
-
-    <!-- <iframe id ="player" width="100%" height="100%" src="" frameborder="0"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-
-
-    <input type="url" placeholder="Enter a YouTube link">
-    <button class="addButton">Add to Playlist</button>
-
-
-    <ul class="songsInQue"></ul>
-    <!-- <div class="songInQue">
-      <div class="songData">
-        <p>Title of the Video</p>
-        <p>Duration</p>
+        <p class="title"></p>
+        <p class="by">by</p>
+        <p class="artist"></p>
       </div>
+      <div id="player"></div>
+      <div id="invisiblePlayer"></div>
 
-      <div class="buttons">
-        <span>Up</span>
-        <span>Del</span>
-        <span>Down</span>
+      <p class="message"></p>
+
+
+      <input class="input" type="url" placeholder="Enter a YouTube link">
+      <button class="addButton">Add to Playlist</button>
+
+
+      <ul class="songsInQue"></ul>
+
+    </main>
+
+    <footer>
+      <div class="container">
+        <h2 class="fullList">The full playlist <br> is coming soon!</h2>
+        <div class="checkboxContainer">
+          <p>Dark / Light Mode</p>
+          <input type="checkbox" class="checkbox" id="chk" />
+          <label class="label" for="chk">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="ball"></div>
+          </label>
+        </div>
       </div>
-    </div>
-
-    <div class="songInQue">
-      <div class="songData">
-        <p>Title of the Video</p>
-        <p>Duration</p>
-      </div>
-
-      <div class="buttons">
-        <span>Up</span>
-        <span>Del</span>
-        <span>Down</span>
-      </div>
-    </div> -->
-
-  </main>
-
-  <footer>
-    <h2>Patreon link - coming soon!</h2>
-  </footer>
+    </footer>
+  </div>
 
   <script src="originalList.js">
   </script>
