--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 
       <input class="input" type="url" placeholder="Enter a YouTube link">
+      <p class="errorMessage">- Invalid url! -</p>
       <button class="addButton">Add to Playlist</button>
 
 
