--- a/fullList.html
+++ b/fullList.html
@@ -69,11 +69,11 @@
         <div class="contaier3">
 
             <img id="shuffle" src="assets/shuffle-light.svg" alt="">
-            <img src="assets/arrow-repeat-light.svg" alt="">
+            <img id="repeat" src="assets/arrow-repeat-light.svg" alt="">
             <img id="skipStart" src="assets/skip-start-fill-light.svg" alt="">
             <img id="playButton" src="assets/play-fill-light.svg" alt="">
             <img id="skipEnd" src="assets/skip-end-fill-light.svg" alt="">
-            <img src="assets/volume-up-fill-light.svg" alt="">
+            <img id="mute" src="assets/volume-up-fill-light.svg" alt="">
             <img id="musicNoteList" src="assets/music-note-list-light.svg" alt="">
         </div>
         <p class="footerInfo" >Some song - Some band</p>
