--- a/fullList.html
+++ b/fullList.html
@@ -46,7 +46,7 @@
       <hr>
 
       <div class="container">
-        <button class="hideList">Hide Playlist</button>
+        <button class="hideList">Hide List</button>
         <div class="checkboxContainer">
           <p>Dark / Light Mode</p>
           <input type="checkbox" class="checkbox" id="chk" />
