--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <footer>
       <div class="container">
-        <h2 class="fullList">The full playlist <br> is coming soon!</h2>
+        <a class="fullList" href="fullList.html">Vellyus's entire<br>playlist</a>
         <div class="checkboxContainer">
           <p>Dark / Light Mode</p>
           <input type="checkbox" class="checkbox" id="chk" />
