--- a/fullList.html
+++ b/fullList.html
@@ -16,7 +16,7 @@
 
       <h1>Vellyus's Playlist</h1>
       <span class="inProgress">
-      - Development In progress -<br>
+        - Development In progress -<br>
         Some songs for special dates are excluded.<br>
         The buttons in the footer are not working yet.<br>
         The search field is not working yet.
@@ -68,15 +68,17 @@
       <div class="container2">
         <div class="contaier3">
 
-            <img id="shuffle" src="assets/shuffle-light.svg" alt="">
-            <img id="repeat" src="assets/arrow-repeat-light.svg" alt="">
-            <img id="skipStart" src="assets/skip-start-fill-light.svg" alt="">
-            <img id="playButton" src="assets/play-fill-light.svg" alt="">
-            <img id="skipEnd" src="assets/skip-end-fill-light.svg" alt="">
-            <img id="mute" src="assets/volume-up-fill-light.svg" alt="">
-            <img id="musicNoteList" src="assets/music-note-list-light.svg" alt="">
+          <!-- <img id="shuffle" src="assets/shuffle-light.svg" alt=""> -->
+          <img id="repeat" src="assets/arrow-repeat-light.svg" alt="">
+          <img id="mute" src="assets/volume-up-fill-light.svg" alt="">
+          <img id="skipStart" src="assets/skip-start-fill-light.svg" alt="">
+          <img id="playButton" src="assets/play-fill-light.svg" alt="">
+          <img id="skipEnd" src="assets/skip-end-fill-light.svg" alt="">
+          <a href="#"> <img id="toTop" src="assets/shift-fill-light.svg" alt="">
+          </a>
+          <img id="musicNoteList" src="assets/music-note-list-light.svg" alt="">
         </div>
-        <p class="footerInfo" >Some song - Some band</p>
+        <p class="footerInfo">Some song - Some band</p>
     </footer>
   </div>
 
