--- a/fullList.html
+++ b/fullList.html
@@ -18,7 +18,6 @@
       <span class="inProgress">
         - Development In progress -<br>
         Some songs for special dates are excluded.<br>
-        The search field is not working yet.
       </span>
 
     </header>
@@ -42,10 +41,10 @@
 
       <ul class="songsInQue"></ul>
 
-      <hr>
+      <!-- <hr> -->
 
       <div class="container">
-        <button class="hideList">Hide List</button>
+        <!-- <button class="searchButton">Search</button> -->
         <div class="checkboxContainer">
           <p>Dark / Light Mode</p>
           <input type="checkbox" class="checkbox" id="chk" />
@@ -55,7 +54,7 @@
         </div>
       </div>
 
-      <input class="input" type="url" placeholder="Search for a song in the list">
+      <input class="input" type="url" placeholder="Search for a song or an artist">
 
 
       <ul class="playList"></ul>
