--- a/fullList.html
+++ b/fullList.html
@@ -39,7 +39,12 @@
 
       <p class="errorMessage">- Invalid url! -</p>
 
-      <ul class="songsInQue"></ul>
+      <div class="songsInQueWrapper">
+        <button class="clearListButton">clear playlist</button>
+
+        <ul class="songsInQue">
+        </ul>
+      </div>
 
       <!-- <hr> -->
 
