--- a/fullList.html
+++ b/fullList.html
@@ -11,13 +11,9 @@
 
 <body>
 
-  <div class="flex-wrapper">
     <header>
 
       <h1>Vellyus's Playlist</h1>
-      <span class="inProgress">
-        - Development In progress -<br>
-      </span>
 
     </header>
 
@@ -45,10 +41,7 @@
         </ul>
       </div>
 
-      <!-- <hr> -->
-
       <div class="container">
-        <!-- <button class="searchButton">Search</button> -->
         <div class="checkboxContainer">
           <p>Dark / Light Mode</p>
           <input type="checkbox" class="checkbox" id="chk" />
@@ -67,10 +60,8 @@
     </main>
 
     <footer>
-      <div class="container2">
-        <div class="contaier3">
+      <!-- <div class="container2"> -->
 
-          <!-- <img id="shuffle" src="assets/shuffle-light.svg" alt=""> -->
           <img id="repeat" src="assets/arrow-repeat-light.svg" alt="">
           <img id="mute" src="assets/volume-up-fill-light.svg" alt="">
           <img id="skipStart" src="assets/skip-start-fill-light.svg" alt="">
@@ -79,10 +70,8 @@
           <a href="#"> <img id="toTop" src="assets/shift-fill-light.svg" alt="">
           </a>
           <img id="musicNoteList" src="assets/music-note-list-light.svg" alt="">
-        </div>
         <p class="footerInfo">Some song - Some band</p>
     </footer>
-  </div>
 
   <script src="originalList.js">
   </script>
