added a createRandomPlaylist feature

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <div class="songsInQueWrapper">
       <button class="clearListButton">clear playlist</button>
+      <button class="randomizeListButton">Create a random Playlist</button>
 
       <input class="addInput" type="url" placeholder="Enter a YouTube link">
       <p class="errorMessage">- Invalid url! -</p>
